updated googleads/videojs-ima library due to changed api of the IMA sdk

--- a/examples/bundled.html
+++ b/examples/bundled.html
@@ -31,11 +31,7 @@
             player.ima({
                 id: 'player',
                 debug: true,
-                adTagUrl: 'http://pubads.g.doubleclick.net/gampad/ads?sz=640x480&' +
-                'iu=/124319096/external/ad_rule_samples&ciu_szs=300x250&ad_rule=1&' +
-                'impl=s&gdfp_req=1&env=vp&output=xml_vmap1&unviewed_position_start=1&' +
-                'cust_params=sample_ar%3Dpremidpostpod%26deployment%3Dgmf-js&' +
-                'cmsid=496&vid=short_onecue&correlator='
+                adTagUrl: 'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/166336097/Filmon.com-Web&impl=s&gdfp_req=1&env=vp&output=xml_vast2&unviewed_position_start=1&url=[referrer_url]&description_url=[description_url]&correlator=[timestamp]&cust_params=vod%3Dchiefkeeflive'
             });
             player.controls(true);
             player.src({
